--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,11 @@
-body {
-  background-color: rgb(82, 115, 148);
+@import url("https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap");
+.body {
+  background-color: rgb(110, 148, 186);
+  font-family: Arial, sans-serif;
 }
+
 /* cart componetnents*/
-.card {
+/* .card {
   border: 1px solid lightcoral;
   border-radius: 10px;
   box-shadow: 5px 5 px 5px red;
@@ -35,9 +38,10 @@ body {
   padding: 10px;
   border: 1px solid hsl(0, 0%, 50%, 0.9);
 }
+*/
 
 /* User Loggin  */
-.welcome-message {
+/* .welcome-message {
   font-size: 2.5rem;
   background-color: rebeccapurple;
   color: white;
@@ -52,10 +56,10 @@ body {
   padding: 10px;
   border-radius: 5px;
   margin: 0;
-}
+} */
 
 /* list componets */
-.list-category {
+/* .list-category {
   font-size: 2.5em;
   font-weight: bold;
   color: hsl(0, 0%, 20%);
@@ -76,4 +80,139 @@ body {
 .list-items li:hover {
   color: hsl(0, 0%, 61%);
   cursor: pointer;
+}
+
+.counter-container {
+  text-align: center;
+  font-family: "Permanent Marker", cursive;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.count-display {
+  font-size: 10em;
+  margin: 0;
+  margin-bottom: 50px;
+}
+.counter-button {
+  width: 150px;
+  height: 50px;
+  font-size: 1.5em;
+  font-weight: bold;
+  margin: 0px 5px;
+  background-color: hsl(197, 100%, 58%);
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+.counter-button:hover {
+  background-color: hsl(197, 100%, 48%);
+  color: rgb(212, 223, 235);
+}
+
+.color-picker-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+h1 {
+  margin: 50px;
+  font-size: 3em;
+}
+.color-display {
+  width: 300px;
+  height: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 5px solid hsl(0, 05, 80%);
+  border-radius: 25px;
+  margin-bottom: 25px;
+  transition: 0.25s ease;
+}
+.color-display p {
+  color: hsl(0, 0%, 20%);
+  font-size: 2em;
+  text-align: center;
+}
+label {
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+input[type="color"] {
+  width: 75px;
+  height: 50px;
+  padding: 5px;
+  border-radius: 10px;
+  border: 3px solid hsl(0, 0%, 80%);
+} */
+
+ /* 15 To-Do-List App */
+.to-do-list {
+  font-family: Arial, sans-serif;
+  text-align: center;
+  margin-top: 100px;
+}
+h1 {
+  font-size: 4rem;
+}
+button {
+  font-size: 1.7rem;
+  font-weight: bold;
+  padding: 10px 20px;
+  color: rgb(255, 255, 255);
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: backgriund-color 0.5s ease;
+}
+.add-button {
+  background-color: hsl(125, 47%, 54%);
+}
+.add-button:hover {
+  background-color: hsl(125, 47%, 44%);
+}
+.delete-button {
+  background-color: hsl(10, 90%, 50%);
+}
+.delete-button:hover {
+  background-color: hsl(10, 90%, 40%);
+}
+.move-button {
+  background-color: hsl(216, 80%, 52%);
+}
+.move-button:hover {
+  background-color: hsl(216, 80%, 42%);
+}
+input[type="text"] {
+  font-size: 1.6rem;
+  padding: 10px;
+  border: 2px solid hsla(0, 0%, 100%, 0.5);
+  border-radius: 5px;
+  color: hsla(0, 0%, 0%, 0.5);
+}
+ol {
+  padding: 0;
+}
+li {
+  font-size: 2rem;
+  font-weight: bold;
+  padding: 15px;
+  background-color: hsl(0, 100%, 97%);
+  margin-bottom: 10px;
+  border: 3px solid hsl(0, 0%, 85%, 0.75);
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+}
+.text {
+  flex: 1;
+}
+.delete-button,
+.move-button {
+  padding: 8px 12px;
+  font-size: 1.4rem;
+  margin-left: 10px;
 }
